--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>网页工坊</title>
+    <title>xmcy计时器</title>
     <script>const controller = {
     render: null,
     component: null,
